tests/assets/test_suites/w3c_wsdl20/documents/bad/InterfaceMessageReference-3B/InterfaceMessageReference.wsdl
<?xml version="1.0" encoding="UTF-8"?>
<!-- https://dev.w3.org/2002/ws/desc/test-suite/documents/bad/InterfaceMessageReference-3B/InterfaceMessageReference.wsdl -->
<!-- Copyright © 2007-03-23 05:52 - W3C, (MIT, ERCIM, Keio). All Rights Reserved. http://www.w3.org/Consortium/Legal/2002/copyright-documents-20021231 -->
<wsdl:description targetNamespace="http://example.org/"
	xmlns:tns="http://example.org/"
	xmlns:wsdl="http://www.w3.org/ns/wsdl"
	xmlns:xs="http://www.w3.org/2001/XMLSchema">

	<wsdl:documentation>
		This test shows a invalid use of WSDL 2.0 interface 
		message reference. The message label of each
		message reference in an interface operation must be
		unique.
		
		This document violates assertion 
		InterfaceMessageReference-1029.
	</wsdl:documentation>
	
	<wsdl:types>
		<xs:schema targetNamespace="http://example.org">
			<xs:element name="myElement" type="xs:string" />
		</xs:schema>
	</wsdl:types>
	
	<wsdl:interface name="myInterface">
		<wsdl:operation name="myOperation" pattern="http://example.org/in-out">
			<wsdl:input messageLabel="myLabel" element="#none"/>
			<wsdl:output messageLabel="myLabel" element="#none"/>
		</wsdl:operation>
	</wsdl:interface>

</wsdl:description>
